--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "zendframework/skeleton-application",
-    "description": "Skeleton Application for ZF2",
+    "name": "breaktherules/rest-hotel-client",
+    "description": "A demonstration of using A REST web service.",
     "license": "BSD-3-Clause",
     "keywords": [
         "framework",
@@ -9,6 +9,10 @@
     "homepage": "http://framework.zend.com/",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zendframework": "2.3.3"
+        "zendframework/zendframework": "2.3.3",
+        "zendframework/zendrest": "^2.0"
+    },
+    "autoload": {
+        "psr-0": { "Hotel": "module/Hotel/" }
     }
 }
