--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,13 @@
     "require": {
         "php": ">=5.3.3",
         "zendframework/zendframework": "2.3.3",
-        "zendframework/zendrest": "^2.0"
+        "zendframework/zendrest": "^2.0",
+        "phpunit/phpunit": "^5.0"
     },
     "autoload": {
-        "psr-0": { "Hotel": "module/Hotel/" }
+        "psr-0": {
+            "Hotel": "module/Hotel/",
+            "HotelTest": "test/HotelTest/"
+        }
     }
 }
